[metadata]
name = russian_cost
version = 0.1.0
author = zzzkorn
author_email = pavelevseev92@yandex.ru
description = Module for converting russian cost to string
license = BSD (3 clause)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zzzkorn/russian_cost
project_urls =
    Bug Tracker = https://github.com/zzzkorn/russian_cost/issues
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.1

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
